ECL-8 Updated endpoints